hphp/hack/test/typecheck/test_consts15.php.exp
File "test_consts15.php", line 7, characters 16-16:
This object is of type D (Typing[4142])
File "test_consts15.php", line 7, characters 26-26:
It is incompatible with this object of type C
because some declarations are incompatible.
Read the following to see why:
File "test_consts15.php", line 8, characters 22-22:
Cannot re-declare this constant as abstract
File "test_consts15.php", line 4, characters 13-13:
Previously defined here
