hphp/hack/test/typecheck/test_consts15.php
<?hh

class C {
  const X = 4;
}

abstract class D extends C {
  abstract const int X;
}
